Fix whitespace and line breaks in comments and IDs on obs/show.

--- a/app/assets/stylesheets/observations/show2.scss
+++ b/app/assets/stylesheets/observations/show2.scss
@@ -2118,9 +2118,6 @@ h3, h4 {
 
 .UserText {
   overflow: hidden;
-  br {
-    line-height: 35px;
-  }
   a {
     color: $bootstrap-link-color;
     cursor: pointer;
